compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__generic_record_update2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1286
expression: "\npub type Box(a) {\n  Box(value: a, i: Int)\n};\npub fn update_box(box: Box(a), value: b) {\n  Box(..box, value: value)\n};"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:6:21
  │
6 │   Box(..box, value: value)
  │                     ^^^^^

Expected type:

    a

Found type:

    b


